FIX flickering inputs when starting edit in DataSpreadSheet

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -147,7 +147,9 @@ table.jexcel > tbody > tr:last-child > td:not(:first-child):not(.readonly):not(.
 table.jexcel > thead > tr > td {border-top-color: rgb(229, 229, 229); border-left-color: rgb(229, 229, 229); background-color: #f2f2f2;}
 table.jexcel > tbody > tr > td.jexcel_row {background-color: #f2f2f2; border-top-color: rgb(229, 229, 229) !important;}
 table.jexcel > tbody > tr > td.readonly {color:inherit;}
-table.jexcel td > input {font-family: inherit;}
+table.jexcel td > input,
+table.jexcel td > textarea {font-family: inherit;}
+html.sapUiTheme-sap_fiori_3 table.jexcel td > textarea {padding-top: 10px !important; padding: 2px 4px; margin-bottom: -1px; margin-top: -1px;}
 table.jexcel > tbody > tr > td.jexcel_dropdown { background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3Cpath d='M7 10l5 5 5-5H7z' fill='gray'/%3E%3C/svg%3E");}
 .exf-spreadsheet-change {position: relative}
 .exf-spreadsheet-change::before {content: "◤"; color: #89919a; font-size: 12px; position: absolute; left: 0; top: 0; margin-left: -2px; margin-top: -3px}
